fix(Engine): Properly close opened resources, avoid using unnecessary temporary.